# weather-app-python

./: .gitignore  README.md  main.py  pyproject.toml
components/: Background.py  BottomNav.py  Details.py  Loading.py  TopBar.py  utility.py
components/kv/: Header.py  Section.py
design/: code.html
